# licentia

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  org.kde.licentia.desktop  org.kde.licentia.json  org.kde.licentia.metainfo.xml
.reuse/: dep5
LICENSES/: CC-BY-3.0.txt
LICENSES/.reuse/: dep5
po/ar/: licentia.po
po/ca/: licentia.po
po/ca@valencia/: licentia.po
po/cs/: licentia.po
po/de/: licentia.po
po/en_GB/: licentia.po
po/eo/: licentia.po
po/es/: licentia.po
po/eu/: licentia.po
po/fi/: licentia.po
po/fr/: licentia.po
po/ga/: licentia.po
po/gl/: licentia.po
po/he/: licentia.po
po/hi/: licentia.po
po/ia/: licentia.po
po/it/: licentia.po
po/ja/: licentia.po
po/ka/: licentia.po
po/ko/: licentia.po
po/lt/: licentia.po
po/lv/: licentia.po
po/nl/: licentia.po
po/pl/: licentia.po
po/pt/: licentia.po
po/pt_BR/: licentia.po
po/sa/: licentia.po
po/sk/: licentia.po
po/sl/: licentia.po
po/sv/: licentia.po
po/tr/: licentia.po
po/uk/: licentia.po
po/zh_CN/: licentia.po
po/zh_TW/: licentia.po
src/: CMakeLists.txt  license.cpp  license.h  licenses.json  licensesmodel.cpp  licensesmodel.h  main.cpp  resources.qrc
src/ui/: About.qml  GlobalMenu.qml  LicensePanel.qml  Main.qml  PageHeader.qml  main.qml
